# skygraph

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.cursor/rules/: skse-mod-development.mdc
docs/: address-library.md  diagnosing-stutter.md  installation.md  packaging.md  spec.md
plugin/: CMakeLists.txt
plugin/resources/: skygraph.json
plugin/src/: logging.cpp  logging.h  plugin.cpp
plugin/src/config/: plugin_config.cpp  plugin_config.h
plugin/src/crash/: seh_handler.cpp  seh_handler.h
plugin/src/diagnostics/: latest_cache.cpp  latest_cache.h  stutter_flagger.cpp  stutter_flagger.h
plugin/src/samplers/: cpu_breakdown.cpp  cpu_breakdown.h  event_sources.cpp  event_sources.h  frame_sampler.cpp  frame_sampler.h  gpu_sampler.cpp  gpu_sampler.h  memory_sampler.cpp  memory_sampler.h  papyrus_attribution.cpp  papyrus_attribution.h  papyrus_sampler.cpp  papyrus_sampler.h  sampler.cpp  sampler.h  state_sampler.cpp  state_sampler.h  streaming_sampler.cpp  streaming_sampler.h  subsystem_hooks.cpp  subsystem_hooks.h
plugin/src/transport/: pipe_server.cpp  pipe_server.h  ring_buffer.h  rolling_recorder.cpp  rolling_recorder.h  writer_thread.cpp  writer_thread.h
protocol/: CMakeLists.txt
protocol/docs/: protocol.md
protocol/include/skygraph/protocol/: messages.h  pipe.h  version.h
scripts/: deploy.ps1
tools/: pipe_tail.py
viewer/: CMakeLists.txt
viewer/resources/: imgui.ini.default
viewer/src/: app.cpp  app.h  main.cpp
viewer/src/panels/: charts_panel.cpp  charts_panel.h  events_panel.cpp  events_panel.h  papyrus_panel.cpp  papyrus_panel.h  plugins_panel.cpp  plugins_panel.h  status_bar.cpp  status_bar.h  stutter_panel.cpp  stutter_panel.h  timeline_panel.cpp  timeline_panel.h
viewer/src/state/: telemetry_store.cpp  telemetry_store.h
viewer/src/transport/: file_source.cpp  file_source.h  ndjson_source.cpp  ndjson_source.h  pipe_client.cpp  pipe_client.h
